--- a/bin/components.json
+++ b/bin/components.json
@@ -1,1 +1,1 @@
-data = '[{"width":100,"x":152,"y":111,"text":"New button","type":"BUTTON","height":25},{"width":100,"x":341,"y":142,"text":"New Label","type":"LABEL","height":25},{"width":100,"x":511,"y":319,"text":"New TextField","type":"TEXTFIELD","height":25}]';
+data = '[{"width":100,"x":77,"y":27,"text":"New TextField","type":"TEXTFIELD","height":25},{"width":100,"x":88,"y":63,"text":"New Label","type":"LABEL","height":25},{"width":100,"x":75,"y":87,"text":"New button","type":"BUTTON","height":25}]';
